<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/five_dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_PISI"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:cardCornerRadius="@dimen/fifty_dp"

        android:layout_marginStart="@dimen/ten_dp"
        >

        <ImageView
            android:id="@+id/profileImage_PISI"

            android:contentDescription="@string/content_dis"

            android:layout_width="@dimen/forty_dp"
            android:layout_height="@dimen/forty_dp"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_gravity="center"

        android:padding="@dimen/two_dp"

        android:gravity="start"
        >

        <TextView
            android:id="@+id/device_name_PISI"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sourabh"
            android:textSize="14sp"

            android:fontFamily="serif-monospace"

            android:textStyle="bold"

            android:layout_marginBottom="@dimen/two_dp"
            />

        <TextView
            android:id="@+id/address_PISI"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/date"
            android:textSize="14sp"


            android:fontFamily="serif-monospace"

            />

    </LinearLayout>

</LinearLayout>