<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"

        android:contentDescription="@string/content_dis"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:scaleType="fitXY"

        android:layout_marginTop="@dimen/neg_two_hundred_twenty_dp"

        android:background="@drawable/background_for_main_activity"

        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"

        />

    <LinearLayout
        android:id="@+id/layout1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"

        android:gravity="center"

        android:padding="@dimen/five_dp"

        >

        <EditText
            android:id="@+id/search_edit_text"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textColorHint="@android:color/darker_gray"

            android:hint="@string/search_customer_in_your_shop"

            android:textColor="@android:color/black"

            android:background="@drawable/edit_text"

            android:autofillHints="name"

            android:inputType="textPersonName"

            android:layout_weight="1"

            android:layout_marginEnd="@dimen/two_dp"

            android:padding="@dimen/five_dp"

            />


        <ImageButton
            android:id="@+id/search_button"

            android:contentDescription="@string/content_dis"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/search_button"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/layout1"
        android:layout_alignParentStart="true"

        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:cardCornerRadius="@dimen/twenty_dp">

            <ImageView
                android:id="@+id/profileImage"

                android:contentDescription="@string/content_dis"

                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"

                />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_gravity="center"

            android:padding="@dimen/two_dp"

            android:gravity="start"
            >

            <TextView
                android:id="@+id/user_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/sourabh"
                android:textSize="14sp"
                android:textColor="@android:color/white"

                android:fontFamily="serif-monospace"

                android:textStyle="bold"

                android:layout_marginBottom="@dimen/two_dp"
                />

            <TextView
                android:id="@+id/todays_date"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/date"
                android:textSize="14sp"
                android:textColor="#99FFFFFF"

                android:fontFamily="serif-monospace"

                />

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_main"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="@dimen/ten_dp"

        android:layout_marginStart="@dimen/thirty_dp"
        android:layout_marginEnd="@dimen/thirty_dp"

        android:layout_below="@+id/linear_layout"
        android:layout_marginTop="@dimen/twenty_dp"

        app:cardCornerRadius="@dimen/five_dp">

        <LinearLayout
            android:id="@+id/layout2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/ten_dp"

                android:gravity="center"

                android:weightSum="2"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/credit"
                    android:textSize="20sp"
                    android:textAlignment="textStart"

                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="0dp"

                    android:layout_weight="1"/>


                <TextView
                    android:id="@+id/credit_main"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/thousand"
                    android:textSize="20sp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"

                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/ten_dp"

                    android:layout_weight="1"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/ten_dp"

                android:gravity="center"

                android:weightSum="2"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/debit"
                    android:textSize="20sp"
                    android:textAlignment="textStart"

                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="0dp"

                    android:layout_weight="1"/>


                <TextView
                    android:id="@+id/debit_main"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/hundred"
                    android:textSize="20sp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"

                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/ten_dp"

                    android:layout_weight="1"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="@dimen/ten_dp"

                android:gravity="center"

                android:weightSum="2"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/net"
                    android:textSize="20sp"
                    android:textAlignment="textStart"

                    android:paddingStart="@dimen/ten_dp"
                    android:paddingEnd="0dp"

                    android:layout_weight="1"/>


                <TextView
                    android:id="@+id/net_balance_main"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/nine_hundred"
                    android:textSize="20sp"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"

                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/ten_dp"

                    android:layout_weight="1"/>



            </LinearLayout>

            <ImageView
                android:id="@+id/line"

                android:contentDescription="@string/content_dis"

                android:layout_width="match_parent"
                android:layout_height="@dimen/two_dp"

                android:layout_marginStart="@dimen/thirty_dp"
                android:layout_marginEnd="@dimen/thirty_dp"

                android:background="@color/line"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:gravity="center"

                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginBottom="@dimen/five_dp"

                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    />

                <ImageView
                    android:contentDescription="@string/content_dis"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="All_Credit_And_Debit"

                    android:background="@drawable/creditordebit"
                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    />

                <ImageView
                    android:id="@+id/records_main"

                    android:contentDescription="@string/content_dis"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="Records_Main"

                    android:background="@drawable/records"
                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    />



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/peolples_in_your_shop"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/peoples_in_your_shop"
        android:textStyle="bold"

        android:layout_below="@+id/card_view_main"

        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_main"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_below="@+id/peolples_in_your_shop"

        android:orientation="vertical"

        android:scrollbars="vertical"

        android:layout_marginTop="@dimen/ten_dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"

        android:layout_width="@dimen/fifty_dp"
        android:layout_height="@dimen/fifty_dp"

        android:src="@drawable/ic_baseline_add_24"

        android:onClick="floating_button"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_margin="@dimen/twenty_dp"/>

</RelativeLayout>