<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credit_or_Debit_Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_credit_or_debit"

        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"

        app:cardElevation="@dimen/fifty_dp"

        app:cardCornerRadius="@dimen/ten_dp"

        android:layout_centerHorizontal="true"

        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/name_and_phone_number_or_device_address_layout"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"

                android:orientation="vertical"

                android:onClick="Goto_Customer_Profile"

                >

                <TextView
                    android:id="@+id/customer_name"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/app_name"
                    android:textAlignment="center"

                    android:layout_gravity="center"

                    android:layout_marginTop="@dimen/five_dp"
                    />

                <TextView
                    android:id="@+id/customer_num"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/app_name"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/back_button_credit_debit_activity"

                android:contentDescription="@string/content_dis"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/back_button"

                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"

                android:layout_marginStart="@dimen/ten_dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:cardCornerRadius="@dimen/fifty_dp"

                android:layout_alignParentEnd="true"

                android:layout_centerVertical="true"

                android:layout_marginEnd="@dimen/ten_dp"
                >

                <ImageView
                    android:id="@+id/profile_Image_credit_debit"

                    android:contentDescription="@string/content_dis"

                    android:layout_width="@dimen/forty_dp"
                    android:layout_height="@dimen/forty_dp"

                    />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_credit_or_debit"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/card_view_credit_or_debit"
        android:layout_above="@+id/linear_layout_credit_or_debit"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:orientation="vertical"

        android:scrollbars="vertical"
        />

    <LinearLayout
        android:id="@+id/linear_layout_credit_or_debit"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_amount"

            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:background="@drawable/edit_text"

            android:layout_weight="1"

            android:padding="@dimen/five_dp"

            android:hint="@string/add_amount"
            android:textColorHint="#707070"

            android:inputType="numberDecimal"

            android:textColor="@android:color/black"

            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"

            />

        <Button
            android:id="@+id/credit_Button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/button"

            android:onClick="Credit_button"

            android:text="@string/credit"
            android:textColor="@android:color/white"

            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            />

        <Button
            android:id="@+id/debit_Button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/button"

            android:onClick="Debit_Button"

            android:text="@string/debit"
            android:textColor="@android:color/white"

            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"/>




    </LinearLayout>




</RelativeLayout>